2011-03-29  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.6-2.1

	* R/dpqr-stable.R (dstable(*, alpha=1) -> .fct2): "robustified" g()
	* R/dpqr-stable.R (pstable(*, alpha=1) -> .FCT2): ditto + simplified (1 integ.)

2011-03-28  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.6-2

	* R/dpqr-stable.R (dstable -> .fct1): another round of
	improvements, thanks to Dieter Schell's bug reports.

2011-03-24  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/dpqr-stable.R (qstable): also add arguments lower.tail, log.p

2011-03-23  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.6-1.1

	* R/dpqr-stable.R (dstable -> .fct1 -> g): more careful computation
	of g(), notably at +- pi/2 where it could become NaN instead of 0.
	Numerically better but considerably (~ 30-40% ?) slower!
	* tests/dstab-ex.R: testing that

2011-03-21  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/dpqr-stable.R (pstable): new arguments (lower.tail=TRUE, log.p=FALSE)
	not used "properly" yet
	(dPareto, pPareto): new auxiliary functions for tail behavior; not
	used yet - apart from tests:

	* tests/tails.R: new: testing tail behavior.

	* R/dpqr-stable.R (qstable): infinite while(.) now caught

2011-03-12  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/dpqr-stable.R (dstable, .fct1): detect when the integration
	seems completely unreliable and then also use the x=zeta value.
	This cures all remaining big problems I've found.

2011-03-10  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/dpqr-stable.R (dstable, .fct1): use uniroot() to find theta2; then
	possibly split into four (instead just two) intervals for integration.

2011-03-08  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/dist-stableMode.R (stableMode): add 'tol' (and 'beta.max')
	arguments which were implicit before.

	* R/utils.R (.unirootNA): add 'tol' and 'maxiter' arguments.
